# cosmic-shield-simulator

./: CMakeLists.txt  CosmicShieldSimulation.cc  README.md  build-cssim.sh  cleanup-cssim.sh  create_pl_cc.sh  css-testrunner.sh  csv_merger.sh  csv_sorter.sh  dump-g4-materials-db.sh  mk-testrunner-env.sh  pack.sh  run-cssim.sh
config/: README.txt  appconfig.json  beam.json  custom-materials.json  custom-particles.json  geometry.json  wrresolver.json
config/simple/: appconfig.json  beam.json  geometry.json
docs/: G4_11.3.2_materials_db.json  G4_11.3.2_materials_list.txt  sample-code-for-double-G4-csv.txt
docs/CsvMerger-pre3.8.2/: CsvMerger.cc  CsvMerger.hh  README.md
docs/CsvServ-static/: CsvServices.cc  (+2 more)
include/: ActionInitialization.hh  AppConfig.hh  BeamConfigManager.hh  BeamConfigMessenger.hh  CmdLineParser.hh  CommonTypes.hh  CsvHelper.hh  CustomCSVBuilder.hh  CustomIonLoader.hh  CustomMaterialLoader.hh  DetectorConstruction.hh  DetectorMessenger.hh  G4MetaDataUtils.hh  Logger.hh  MaterialsManager.hh  ParticleDataManager.hh  PhysicsManager.hh  PrimaryGeneratorAction.hh  RunAction.hh  SWMeta.hh  StepDataWriter.hh  SteppingAction.hh  SurvPrimCollector.hh  Utils.hh  WRResolver.hh
macros/: README.txt  init_vis.mac  run.mac
src/: ActionInitialization.cc  AppConfig.cc  BeamConfigManager.cc  BeamConfigMessenger.cc  CmdLineParser.cc  CsvHelper.cc  CustomCSVBuilder.cc  CustomIonLoader.cc  CustomMaterialLoader.cc  DetectorConstruction.cc  DetectorMessenger.cc  G4MetaDataUtils.cc  Logger.cc  MaterialsManager.cc  ParticleDataManager.cc  PhysicsManager.cc  PrimaryGeneratorAction.cc  RunAction.cc  SWMeta.cc  StepDataWriter.cc  SteppingAction.cc  SurvPrimCollector.cc  Utils.cc  WRResolver.cc
src_tmpl/: PhysicsManager_1.pre_cc  PhysicsManager_2.pre_cc  PhysicsManager_3.pre_cc  PhysicsManager_4.pre_cc  physics_lists_build.txt
(+12 files in other folders)
